--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "book-club-app",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc --build --noEmit"
+    "typecheck": "react-router typegen && tsc --build --noEmit",
+    "prettier": "prettier \"{app,test}/**/*.{ts,tsx,json}\"",
+    "test:types": "tsc --noEmit -p tsconfig-testing.json",
+    "test:format": "npm run prettier -- --check",
+    "test:format:fix": "npm run prettier -- --write",
+    "test:lint": "eslint \"{app,test}/**/*.{ts,tsx,json}\"",
+    "test:lint:fix": "npm run test:lint -- --fix",
+    "test:unit": "",
+    "test": "npm run test:types && npm run test:format && npm run test:lint && npm run test:unit"
   },
   "dependencies": {
     "@react-router/node": "^7.0.1",
@@ -17,14 +28,22 @@
     "react-router": "^7.0.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.3",
+    "@eslint/js": "^9.15.0",
     "@react-router/dev": "^7.0.1",
-    "@types/node": "^20",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^22",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unicorn": "^56.0.1",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.16.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.2"
   }
