--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "test:types": "tsc --noEmit -p tsconfig-testing.json",
     "test:format": "npm run prettier -- --check",
     "test:format:fix": "npm run prettier -- --write",
-    "test:lint": "eslint \"{app,test}/**/*.{ts,tsx,json}\"",
+    "test:lint": "eslint \"{app,test}/**/*.{ts,tsx,json}\" --ignore-pattern \"app/components/ui/**\"",
     "test:lint:fix": "npm run test:lint -- --fix",
     "test:unit": "",
     "test": "npm run test:types && npm run test:format && npm run test:lint && npm run test:unit"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-router/fs-routes": "^7.0.1",
     "@react-router/node": "^7.0.1",
     "@react-router/serve": "^7.0.1",
     "class-variance-authority": "^0.7.1",
